examples/rust_widgets.generated.h

uint64_t rw_create_button(uint64_t parent, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_checkbox(uint64_t parent, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_color_dialog(uint64_t parent, const char* title, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_combo_box(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_file_dialog(uint64_t parent, const char* title, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_font_dialog(uint64_t parent, const char* title, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_label(uint64_t parent, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_line_edit(uint64_t parent, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_list_box(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_list_view(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_menu(uint64_t parent, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_menu_bar(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_message_box(uint64_t parent, const char* title, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_panel(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_progress_bar(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_radio_button(uint64_t parent, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_scroll_area(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_slider(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_spin_box(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_status_bar(uint64_t parent, const char* text, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_tool_bar(uint64_t parent, int x, int y, unsigned int width, unsigned int height);
uint64_t rw_create_window(const char* title, int x, int y, unsigned int width, unsigned int height);
const char* rw_get_widget_text(uint64_t widget_id);
void rw_hide_widget(uint64_t widget_id);
void rw_init(void);
bool rw_is_widget_enabled(uint64_t widget_id);
bool rw_is_widget_visible(uint64_t widget_id);
void rw_quit(void);
void rw_run(void);
void rw_set_widget_enabled(uint64_t widget_id, bool enabled);
void rw_set_widget_geometry(uint64_t widget_id, int x, int y, unsigned int width, unsigned int height);
void rw_set_widget_text(uint64_t widget_id, const char* text);
void rw_set_widget_visible(uint64_t widget_id, bool visible);
void rw_show_widget(uint64_t widget_id);