bindings/python/rust_widgets/__init__.py

"""Python ctypes-based bindings for `rust-widgets` native GUI library.

Usage::

    from rust_widgets import RustWidgets

    rw = RustWidgets()
    rw.init()
    win = rw.create_window("Hello", 100, 100, 800, 600)
    btn = rw.create_button(win, "Click me", 10, 10, 120, 32)
    rw.show_widget(win)
    rw.run()
"""

from __future__ import annotations

import ctypes
import ctypes.util
import os
import platform as _sys_platform
import sys
from pathlib import Path
from typing import Any, Callable, Optional, Tuple

from .errors import (
    RW_ERROR_SUCCESS,
    capabilities_description,
    error_name,
    trigger_name,
)

__all__ = [
    "RustWidgets",
    "find_library",
    "LibraryNotFoundError",
]

# ---------------------------------------------------------------------------
# Helpers
# ---------------------------------------------------------------------------

_LIB_NAMES: dict[str, list[str]] = {
    "linux": ["librust_widgets.so"],
    "darwin": ["librust_widgets.dylib"],
    "win32": ["rust_widgets.dll"],
}


def find_library(*, extra_dirs: Optional[list[str | Path]] = None) -> str:
    """Locate the ``rust-widgets`` shared library.

    Searches (in order):

    1. ``extra_dirs`` (if provided)
    2. ``LD_LIBRARY_PATH`` / ``DYLD_LIBRARY_PATH`` / ``PATH``
    3. ``ctypes.util.find_library``
    4. A ``target/release`` or ``target/debug`` subdirectory relative to
       the project root (walked from the current file's location).

    Returns the absolute path to the library.

    Raises
    ------
    LibraryNotFoundError
        If the library could not be found.
    """
    system = _sys_platform.system().lower()
    if system == "linux":
        names = _LIB_NAMES["linux"]
    elif system == "darwin":
        names = _LIB_NAMES["darwin"]
    elif system == "windows":
        names = _LIB_NAMES["win32"]
    else:
        names = [f"librust_widgets.so"]

    search_dirs: list[Path] = []

    # 1. User-provided extra directories
    if extra_dirs:
        search_dirs.extend(Path(d).resolve() for d in extra_dirs)

    # 2. Walk up from this file to find Cargo.toml -> target/release|debug
    here = Path(__file__).resolve().parent
    for parent in [here] + list(here.parents):
        cargo = parent / "Cargo.toml"
        if cargo.is_file():
            for build_dir in ("release", "debug"):
                candidate = parent / "target" / build_dir
                if candidate.is_dir():
                    search_dirs.append(candidate)
            # Also check one level up (monorepo structure)
            for build_dir in ("release", "debug"):
                candidate = parent.parent / "target" / build_dir
                if candidate.is_dir():
                    search_dirs.append(candidate)
            break

    # Try explicit paths first
    for d in search_dirs:
        for name in names:
            full = d / name
            if full.is_file():
                return str(full)

    # 3. ctypes.util.find_library (uses system loader paths)
    for name in names:
        # Strip lib prefix and .so/.dylib suffix for find_library
        base = name
        if base.startswith("lib"):
            base = base[3:]
        for ext in (".so", ".dylib", ".dll"):
            if base.endswith(ext):
                base = base[: -len(ext)]
                break
        found = ctypes.util.find_library(base)
        if found:
            return found

    # 4. Raw dlopen-friendly name as a last resort
    for name in names:
        try:
            # Try loading by soname — if the system loader finds it, we're good
            lib = ctypes.cdll.LoadLibrary(name)
            # Got it — return the name so the caller can load properly
            return name
        except OSError:
            continue

    msg = (
        f"Could not locate rust-widgets shared library.\n"
        f"Tried names: {names}\n"
        f"Searched dirs: {search_dirs}\n"
        "Ensure the library is built and on LD_LIBRARY_PATH / DYLD_LIBRARY_PATH / PATH."
    )
    raise LibraryNotFoundError(msg)


class LibraryNotFoundError(FileNotFoundError):
    """Raised when the ``rust-widgets`` shared library cannot be found."""


# ---------------------------------------------------------------------------
# RustWidgets class
# ---------------------------------------------------------------------------


class RustWidgets:
    """Pythonic wrapper around the ``rust-widgets`` C ABI.

    Every public method corresponds to a ``rw_*`` C function.
    The native library is loaded lazily on first call.

    Parameters
    ----------
    lib_path
        Path to the shared library.  If ``None``, :func:`find_library` is
        used to locate it automatically.
    extra_dirs
        Extra directories to search (passed to :func:`find_library`) when
        ``lib_path`` is ``None``.
    """

    def __init__(
        self,
        lib_path: Optional[str | Path] = None,
        *,
        extra_dirs: Optional[list[str | Path]] = None,
    ):
        self._lib: Optional[ctypes.CDLL] = None
        self._lib_path: Optional[str] = None
        if lib_path is not None:
            self._lib_path = str(lib_path)
        self._extra_dirs = extra_dirs

    # ------------------------------------------------------------------ #
    # Library loading                                                    #
    # ------------------------------------------------------------------ #

    @property
    def lib(self) -> ctypes.CDLL:
        """The loaded ``ctypes.CDLL`` instance (lazy)."""
        if self._lib is None:
            path = (
                self._lib_path
                if self._lib_path
                else find_library(extra_dirs=self._extra_dirs)
            )
            self._lib = ctypes.cdll.LoadLibrary(path)
            self._lib_path = path
            self._setup_argtypes()
        return self._lib

    def _setup_argtypes(self) -> None:
        """Declare argument and return types on all C functions."""

        L = self._lib

        # Common type aliases
        c_bool = ctypes.c_bool
        c_char_p = ctypes.c_char_p
        c_void_p = ctypes.c_void_p
        c_int = ctypes.c_int
        c_uint = ctypes.c_uint
        c_float = ctypes.c_float
        c_uint64 = ctypes.c_uint64
        c_int64 = ctypes.c_int64
        POINTER = ctypes.POINTER

        # ------------------------------------------------------------------ #
        # Core lifecycle                                                     #
        # ------------------------------------------------------------------ #
        L.rw_init.argtypes = []
        L.rw_init.restype = None

        L.rw_run.argtypes = []
        L.rw_run.restype = None

        L.rw_quit.argtypes = []
        L.rw_quit.restype = None

        # ------------------------------------------------------------------ #
        # Widget creation  — all return u64 (0 = failure)                     #
        #                                                                     #
        # Common pattern:                                                     #
        #   create_*(parent: u64, [text: *const c_char,] x: c_int, y: c_int, #
        #              width: c_uint, height: c_uint) -> u64                   #
        # ------------------------------------------------------------------ #

        # Window (no parent)
        L.rw_create_window.argtypes = [
            c_char_p,  # title
            c_int,
            c_int,  # x, y
            c_uint,
            c_uint,  # width, height
        ]
        L.rw_create_window.restype = c_uint64

        # Simple widgets: parent + text + x/y/w/h
        _textual = [
            c_uint64,  # parent
            c_char_p,  # text
            c_int,
            c_int,  # x, y
            c_uint,
            c_uint,  # width, height
        ]
        L.rw_create_button.argtypes = _textual
        L.rw_create_button.restype = c_uint64

        L.rw_create_checkbox.argtypes = _textual
        L.rw_create_checkbox.restype = c_uint64

        L.rw_create_line_edit.argtypes = _textual
        L.rw_create_line_edit.restype = c_uint64

        L.rw_create_label.argtypes = _textual
        L.rw_create_label.restype = c_uint64

        L.rw_create_radio_button.argtypes = _textual
        L.rw_create_radio_button.restype = c_uint64

        L.rw_create_menu.argtypes = _textual
        L.rw_create_menu.restype = c_uint64

        L.rw_create_status_bar.argtypes = _textual
        L.rw_create_status_bar.restype = c_uint64

        # Simple widgets: parent + x/y/w/h (no text)
        _nont_textual = [
            c_uint64,  # parent
            c_int,
            c_int,  # x, y
            c_uint,
            c_uint,  # width, height
        ]
        L.rw_create_slider.argtypes = _nont_textual
        L.rw_create_slider.restype = c_uint64

        L.rw_create_progress_bar.argtypes = _nont_textual
        L.rw_create_progress_bar.restype = c_uint64

        L.rw_create_combo_box.argtypes = _nont_textual
        L.rw_create_combo_box.restype = c_uint64

        L.rw_create_list_box.argtypes = _nont_textual
        L.rw_create_list_box.restype = c_uint64

        L.rw_create_panel.argtypes = _nont_textual
        L.rw_create_panel.restype = c_uint64

        L.rw_create_spin_box.argtypes = _nont_textual
        L.rw_create_spin_box.restype = c_uint64

        L.rw_create_list_view.argtypes = _nont_textual
        L.rw_create_list_view.restype = c_uint64

        L.rw_create_scroll_area.argtypes = _nont_textual
        L.rw_create_scroll_area.restype = c_uint64

        L.rw_create_menu_bar.argtypes = _nont_textual
        L.rw_create_menu_bar.restype = c_uint64

        L.rw_create_tool_bar.argtypes = _nont_textual
        L.rw_create_tool_bar.restype = c_uint64

        # MessageBox: parent + title + text + x/y/w/h
        L.rw_create_message_box.argtypes = [
            c_uint64,  # parent
            c_char_p,  # title
            c_char_p,  # text
            c_int,
            c_int,  # x, y
            c_uint,
            c_uint,  # width, height
        ]
        L.rw_create_message_box.restype = c_uint64

        # File / Color / Font dialog: parent + title + x/y/w/h
        _dialog = [
            c_uint64,  # parent
            c_char_p,  # title
            c_int,
            c_int,  # x, y
            c_uint,
            c_uint,  # width, height
        ]
        L.rw_create_file_dialog.argtypes = _dialog
        L.rw_create_file_dialog.restype = c_uint64

        L.rw_create_color_dialog.argtypes = _dialog
        L.rw_create_color_dialog.restype = c_uint64

        L.rw_create_font_dialog.argtypes = _dialog
        L.rw_create_font_dialog.restype = c_uint64

        # ------------------------------------------------------------------ #
        # Widget manipulation                                                #
        # ------------------------------------------------------------------ #
        L.rw_show_widget.argtypes = [c_uint64]
        L.rw_show_widget.restype = None

        L.rw_hide_widget.argtypes = [c_uint64]
        L.rw_hide_widget.restype = None

        L.rw_set_widget_text.argtypes = [c_uint64, c_char_p]
        L.rw_set_widget_text.restype = None

        L.rw_get_widget_text.argtypes = [c_uint64]
        L.rw_get_widget_text.restype = c_char_p

        L.rw_set_widget_enabled.argtypes = [c_uint64, c_bool]
        L.rw_set_widget_enabled.restype = None

        L.rw_is_widget_enabled.argtypes = [c_uint64]
        L.rw_is_widget_enabled.restype = c_bool

        L.rw_set_widget_visible.argtypes = [c_uint64, c_bool]
        L.rw_set_widget_visible.restype = None

        L.rw_is_widget_visible.argtypes = [c_uint64]
        L.rw_is_widget_visible.restype = c_bool

        L.rw_set_widget_geometry.argtypes = [
            c_uint64,
            c_int,
            c_int,
            c_uint,
            c_uint,
        ]
        L.rw_set_widget_geometry.restype = None
